Tue Mar 25 17:50:23 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/examples/Notify/MC/monitor/monitor.cpp:
        * orbsvcs/tests/unit/Notify/MC/MonitorControlExt/MonitorControlExt.cpp:

          Use .in() to avoid warnings from gcc.

Tue Mar 25 14:13:15 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/notify_serv.mpb:

          Changed the order of Notification_Serv and Notification_Skel so they
          are in the correct dependency order.

        * orbsvcs/tests/Bug_2926_Regression/Bug_2926_Regression.mpc:

          Removed a redundant base project.

Mon Mar 24 21:17:12 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * utils/nslist/Makefile.am:

          Regenerated.

Mon Mar 24 17:28:37 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/Generic_Registry.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Generic_Registry.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.h:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.inl:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.h:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannel.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannelFactory.h:
        * orbsvcs/orbsvcs/Notify/MonitorControlExt/MonitorEventChannelFactory.cpp:

          Switch from using ACE_SYNCH_* to TAO_SYNCH_* to avoid fuzz errors.

Mon Mar 24 12:33:47 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * NEWS:

          Added an entry for this feature addition.

        * docs/notification/using_monitor_extensions.html:

          Documented the ability to create named consumer and supplier
          admins.

        * orbsvcs/examples/Notify/MC/TkMonitor/modules/MonitorControl.pm:

          Changed to avoid displaying queue size if the queue size is zero.
